# CGE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cge/: CMakeLists.txt
cge/include/: cge.hpp
cge/include/cge/: cge.hpp  engine.hpp  settings.hpp  types.hpp  vec.hpp
cge/src/: debug.hpp  engine.cpp  engine.hpp  events.cpp  game.cpp  impl.hpp  mvk.hpp  mvk.mm  render.cpp  renderer.hpp  renderer_vk.cpp  soa.hpp  update.cpp
cge/src/cvk/: cvk.cpp  cvk.hpp  cvk.mm
cge/src/shaders/glsl/: shader.frag  shader.vert
examples/: CMakeLists.txt  utils.hpp
examples/demo1/: main.cpp
examples/example/: main.cpp
